[gd_scene load_steps=23 format=2]

[ext_resource path="res://respostas.gd" type="Script" id=1]
[ext_resource path="res://assets/pixil-layer-Background (9).png" type="Texture" id=2]
[ext_resource path="res://assets/pixil-frame-0 (4) (1).png" type="Texture" id=3]
[ext_resource path="res://assets/pixil-frame-0 (2).png" type="Texture" id=4]
[ext_resource path="res://assets/pixil-layer-Background (20).png" type="Texture" id=5]
[ext_resource path="res://assets/pixil-layer-Background (28).png" type="Texture" id=6]
[ext_resource path="res://assets/pixil-layer-Background (35).png" type="Texture" id=7]
[ext_resource path="res://assets/pixil-layer-Background (34).png" type="Texture" id=8]
[ext_resource path="res://assets/pixil-layer-Background (25).png" type="Texture" id=9]
[ext_resource path="res://assets/pixil-frame-0 (5).png" type="Texture" id=10]
[ext_resource path="res://assets/pixil-layer-Background (12).png" type="Texture" id=11]
[ext_resource path="res://assets/pixil-layer-Background (22).png" type="Texture" id=12]
[ext_resource path="res://assets/pixil-layer-Background (24) (1).png" type="Texture" id=13]
[ext_resource path="res://assets/pixil-layer-Background (11).png" type="Texture" id=14]
[ext_resource path="res://assets/pixil-layer-Background (23).png" type="Texture" id=15]
[ext_resource path="res://assets/fundo.png" type="Texture" id=16]
[ext_resource path="res://assets/pixil-layer-Background (21).png" type="Texture" id=17]
[ext_resource path="res://assets/pixil-layer-Background (30).png" type="Texture" id=18]
[ext_resource path="res://assets/pixil-layer-Background (10).png" type="Texture" id=19]
[ext_resource path="res://assets/game-over.png" type="Texture" id=20]
[ext_resource path="res://assets/icon.png" type="Texture" id=21]
[ext_resource path="res://assets/Batalha_.wav" type="AudioStream" id=22]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button1" type="TouchScreenButton" parent="."]
position = Vector2( 310, 413 )
scale = Vector2( 2.62687, 2.9 )
normal = ExtResource( 3 )
pressed = ExtResource( 4 )

[node name="Button2" type="TouchScreenButton" parent="."]
position = Vector2( 667, 413 )
scale = Vector2( 2.62687, 2.9 )
normal = ExtResource( 3 )
pressed = ExtResource( 4 )

[node name="Button3" type="TouchScreenButton" parent="."]
position = Vector2( 667, 505 )
scale = Vector2( 2.62687, 2.9 )
normal = ExtResource( 3 )
pressed = ExtResource( 4 )

[node name="Button4" type="TouchScreenButton" parent="."]
position = Vector2( 310, 505 )
scale = Vector2( 2.62687, 2.9 )
normal = ExtResource( 3 )
pressed = ExtResource( 4 )

[node name="botao_pause" type="TouchScreenButton" parent="."]
position = Vector2( 961, 27 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 7 )
pressed = ExtResource( 8 )

[node name="RichTextLabel1" type="RichTextLabel" parent="."]
margin_left = 325.0
margin_top = 422.0
margin_right = 655.0
margin_bottom = 508.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[b] é não coletar, armazenar, compartilhar, ou realizar qualquer outra forma
de tratamento de dados pessoais ou sensíveis sem se certificar de estar alinhado com
diretrizes e políticas.[/b]"
text = " é não coletar, armazenar, compartilhar, ou realizar qualquer outra forma
de tratamento de dados pessoais ou sensíveis sem se certificar de estar alinhado com
diretrizes e políticas."

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 678.0
margin_top = 421.0
margin_right = 1008.0
margin_bottom = 507.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[b] Vagabunda .[/b]"
text = " Vagabunda ."

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
margin_left = 680.0
margin_top = 516.0
margin_right = 1016.0
margin_bottom = 586.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "fodase"

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
margin_left = 326.0
margin_top = 515.0
margin_right = 662.0
margin_bottom = 585.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "vai tabalhar vagabunda"

[node name="Button5" type="TouchScreenButton" parent="."]
position = Vector2( 365, 165 )
scale = Vector2( 2.70896, 4 )
normal = ExtResource( 3 )

[node name="RichTextLabel5" type="RichTextLabel" parent="."]
margin_left = 376.0
margin_top = 181.0
margin_right = 712.0
margin_bottom = 275.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[b] Vagabunda .[/b]"
text = " Vagabunda ."

[node name="fibrinha" type="Sprite" parent="."]
position = Vector2( 139, 482 )
scale = Vector2( 0.363147, 0.391969 )
texture = ExtResource( 5 )

[node name="shokinho" type="Sprite" parent="."]
position = Vector2( 810, 287 )
scale = Vector2( 0.88, 0.875849 )
texture = ExtResource( 10 )

[node name="fundo" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 512, 299 )
texture = ExtResource( 16 )
normal_map = ExtResource( 16 )

[node name="coracao1" type="Sprite" parent="."]
position = Vector2( 40, 40 )
texture = ExtResource( 2 )

[node name="coracao2" type="Sprite" parent="."]
position = Vector2( 100, 40 )
texture = ExtResource( 2 )

[node name="coracao3" type="Sprite" parent="."]
position = Vector2( 160, 40 )
texture = ExtResource( 2 )

[node name="coracao4" type="Sprite" parent="."]
position = Vector2( 220, 40 )
texture = ExtResource( 2 )

[node name="coracao_vazio1" type="Sprite" parent="."]
position = Vector2( 40, 40 )
texture = ExtResource( 19 )

[node name="coracao_vazio2" type="Sprite" parent="."]
position = Vector2( 100, 40 )
texture = ExtResource( 19 )

[node name="coracao_vazio3" type="Sprite" parent="."]
position = Vector2( 160, 40 )
texture = ExtResource( 19 )

[node name="coracao_vazio4" type="Sprite" parent="."]
position = Vector2( 220, 40 )
texture = ExtResource( 19 )

[node name="tela_escura" type="Sprite" parent="."]
position = Vector2( 512, 299 )
scale = Vector2( 10.3, 6 )
texture = ExtResource( 15 )

[node name="continuar" type="TouchScreenButton" parent="."]
position = Vector2( 400, 150 )
normal = ExtResource( 14 )
pressed = ExtResource( 11 )

[node name="volume" type="TouchScreenButton" parent="."]
position = Vector2( 400, 220 )
normal = ExtResource( 13 )
pressed = ExtResource( 9 )

[node name="etica" type="TouchScreenButton" parent="."]
position = Vector2( 400, 290 )
normal = ExtResource( 12 )
pressed = ExtResource( 17 )

[node name="volume_on" type="Sprite" parent="."]
position = Vector2( 610, 250 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 18 )

[node name="volume_off" type="Sprite" parent="."]
position = Vector2( 610, 250 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 6 )

[node name="game_over" type="Sprite" parent="."]
position = Vector2( 511, 300 )
scale = Vector2( 2.02353, 1.42381 )
texture = ExtResource( 20 )

[node name="reiniciar" type="TouchScreenButton" parent="."]
position = Vector2( 475, 380 )
normal = ExtResource( 21 )

[node name="musica_batalha" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 22 )

[connection signal="released" from="Button1" to="." method="_on_Button1_released"]
[connection signal="released" from="Button2" to="." method="_on_Button2_released"]
[connection signal="released" from="Button3" to="." method="_on_Button3_released"]
[connection signal="released" from="Button4" to="." method="_on_Button4_released"]
[connection signal="released" from="botao_pause" to="." method="_on_botao_pause_released"]
[connection signal="released" from="continuar" to="." method="_on_continuar_released"]
[connection signal="released" from="volume" to="." method="_on_volume_released"]
[connection signal="released" from="etica" to="." method="_on_etica_released"]
[connection signal="released" from="reiniciar" to="." method="_on_reiniciar_released"]
